Changed NPCs to refuse joining the crew with previously unused dialogue if dismissed twice for Lee, Lester, Mario.
Changed NPCs to return to monastery after surviving the Trial of Fire for Agon, Igaraz, Ulf.
Changed NPCs to wear farmer clothing and equip sickles after returning to Khorinis for Pardok, Telbor, Tonak.
Changed default weapon from Heavy Branch to something that makes sense for Akil, Cornelius, Judge, Larius, Onar, Sekob.
Changed dialog option for trading to what NH will actually say with Fisk, Garett, Huno, Juan, Miguel, Scatty.
Changed option to comment about fake mining shares to only appear after browsing wares for Bosper, Canthar, Elena, Hakon, Matteo, Orlan, Rosi, Zuris.
Changed what drinks NPCs drink, depending on gender and class.

Fixed NPCs not always equipping correct armor after Ring of Water meeting for Cavalorn, Cord, Gaan, Lares, Martin, Orlan.
Fixed NPCs not considering Heavy Militia armor as militia armor for Borka, Kardif, Meldor, Nagur, Nadja.
Fixed NPCs referring to Lord Andre when telling NH to go settle his crimes for  Fajeth, Tengron, Knight 263.
Fixed NPCs showing wrong pick pocket difficulty in Valley of Mines for Carlos, Sylvio.
Fixed NPCs speaking out NH's dialog lines for Pardos, Peck.
Fixed NPCs talking to NH when he is transformed into an animal.
Fixed XP award for pickpocketing Cavalorn, Dobar, Engor, Francis, Franco, Salandril, Valentino.
Fixed XP award for recruiting Lares, Lester.
Fixed failed quests not immediately updating in journal for Alvin, Babo, Gorax, Greg, Dyrian, Opolos, Sekob, Hanna and the crew members.
Fixed freed slaves leaving their corpses in a cave near the bandit camp for Patrick, Monty, Tonak, Telbor, Pardos.
Fixed issue with dragon dialog restarting quest 'Dragon Eggs', if it was already completed.
Fixed logical issues with dialogue of Baltram, Bennet, Diego, Fernando, Lobart, Lothar, Lucia, Pyrokar, Ramon, Ulf, Vatras, Xardas.